--- a/package.json
+++ b/package.json
@@ -185,6 +185,7 @@
 		"caniuse-lite": "1.0.30001579",
 		"chalk": "4.1.1",
 		"change-case": "4.1.2",
+		"client-zip": "^2.4.5",
 		"commander": "9.2.0",
 		"concurrently": "3.5.0",
 		"copy-webpack-plugin": "10.2.0",
